--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{background-color:#00e745;text-align:justify;font-size:18px;} 
+body{background-color:#4974a5;text-align:justify;font-size:18px;} 
 h1 {text-align:center;background-color:#30d110;color:#1ccf67;}
 h3 {text-align:justify;color:#1f7a79;}
 b{color:rgb(9, 255, 0);font-size:18px;}
