--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{background-color:#4500e7;text-align:justify;font-size:18px;} 
-h1 {text-align:center;background-color:#30d110;color:#1ccf67;}
+h1 {text-align:center;background-color:#30d110;color:#00e745;}
 h3 {text-align:justify;color:#1f7a79;}
 b{color:rgb(9, 255, 0);font-size:18px;}
 i{color:rgb(0, 255, 34);font-size:18px,}
