--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{background-color:#000000;text-align:justify;font-size:18px;} 
-h1 {text-align:center;background-color:#30d110;color:#000000;}
+h1 {text-align:center;background-color:#000000;color:#000000;}
 h3 {text-align:justify;color:#1f7a79;}
 b{color:rgb(9, 255, 0);font-size:18px;}
 i{color:rgb(0, 255, 34);font-size:18px,}
