--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{background-color:#000000;text-align:justify;font-size:18px;} 
+body{background-color:#d3d3d3;text-align:justify;font-size:18px;} 
 h1 {text-align:center;background-color:#d3d3d3;color:#d3d3d3;}
 h3 {text-align:justify;color:#1f7a79;}
 b{color:rgb(9, 255, 0);font-size:18px;}
