--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body{background-color:#d3d3d3;text-align:justify;font-size:18px;} 
-h1 {text-align:center;background-color:#d3d3d3;color:#d3d3d3;}
-h3 {text-align:justify;color:#1f7a79;}
+body{background-color:#4500e7;text-align:justify;font-size:18px;} 
+h1 {text-align:center;background-color:#00e745;color:#4500e7;}
+h3 {text-align:justify;color:#00e745;}
 b{color:rgb(9, 255, 0);font-size:18px;}
 i{color:rgb(0, 255, 34);font-size:18px,}
 header, footer{background-color:#499CBA;color:#ceeffc;text-align:center;font-size:20px;border: black solid 2px;}
