--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h3 {text-align:justify;color:#00e745;}
 b{color:rgb(9, 255, 0);font-size:18px;}
 i{color:rgb(0, 255, 34);font-size:18px,}
 header, footer{background-color:#499CBA;color:#ceeffc;text-align:center;font-size:20px;border: black solid 2px;}
-main {background-color: #000000;}
+main {background-color: #00e745;}
 nav li {text-transform: uppercase;list-style: none; display: inline; margin-left: 10px; text-align: right;}
 nav a {color: rgb(119,19,250); text-decoration: none; text-align: right;}
 .PRIMEIROPARAGRAFO {text-align: justify; font-size: 18px; border: black solid 2px; padding: 10px; margin: 10px;}
